--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "serve": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "author": "Tony Zhou",
   "license": "ISC",
@@ -15,6 +15,13 @@
   },
   "homepage": "https://github.com/ltzone/blog#readme",
   "devDependencies": {
+    "@maginapp/vuepress-plugin-katex": "^1.0.9",
     "vuepress": "^1.8.0"
+  },
+  "dependencies": {
+    "markdown-it": "^12.0.4",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-mathjax": "^2.0.0",
+    "vuepress-plugin-mathjax": "^1.2.8"
   }
 }
