--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "homepage": "https://github.com/ltzone/blog#readme",
   "devDependencies": {
     "@maginapp/vuepress-plugin-katex": "^1.0.9",
-    "vuepress": "^1.8.0"
+    "vuepress": "^1.8.0",
+    "vuepress-plugin-auto-sidebar": "^1.5.0"
   },
   "dependencies": {
     "markdown-it": "^12.0.4",
