--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "@maginapp/vuepress-plugin-katex": "^1.0.9",
     "vuepress": "^1.8.0",
-    "vuepress-plugin-auto-sidebar": "^1.5.0"
+    "vuepress-plugin-auto-sidebar": "^1.5.0",
+    "vuepress-theme-reco": "^1.6.1"
   },
   "dependencies": {
     "markdown-it": "^12.0.4",
