--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@maginapp/vuepress-plugin-katex": "^1.0.9",
     "vuepress": "^1.8.0",
     "vuepress-plugin-auto-sidebar": "git+https://gitee.com/ltzhou/vuepress-plugin-auto-sidebar.git",
-    "vuepress-theme-reco": "^1.6.1"
+    "vuepress-theme-reco": "1.6.1"
   },
   "dependencies": {
     "markdown-it": "^12.0.4",
